--- a/programa.html
+++ b/programa.html
@@ -5,16 +5,6 @@
 
 //document.write()//
 
-	alert ("a mensagem correta é, o que faz aqui ?");
-	alert ("o que buscas ?")
-	alert ("alguma página ?")
-	alert ("Quer informação ?")
-	alert ("Não está achando o que quer ?")
-	alert ("Estou te irritando ?")
-	alert ("Prefere fechar a paginá ?")
-	alert ("vai!!!")
-	alert ("Se continuar aqui não vai encontrar nada trouxa")
-	alert ("Ta bão pode entrar")
-	alert ("belez era zoeira, agora é serio, bem vindo")
+	alert ("Bem vindo ao meu primeiro teste inicial de criação de site");
 </script>
 
