ano,calcula_consumo,matemática,o que não fazemos por amor

--- a/programa.html
+++ b/programa.html
@@ -3,8 +3,9 @@
 <h1> Oi </h1>
 <script>
 
-//document.write()//
+  document.write("Fala ");
 
-	alert ("Bem vindo ao meu primeiro teste inicial de criação de site");
+   document.write (20 * 15)
+
 </script>
 
